<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/calendar"
        android:title="@string/today"
        android:icon="@drawable/baseline_calendar_month_24"
        />
    <item
        android:id="@+id/graphs"
        android:title="@string/insights"
        android:icon="@drawable/baseline_auto_graph_24"
        />

    <item
        android:id="@+id/resources"
        android:title="@string/Chat"
        android:icon="@drawable/baseline_chat_24"
        />

    <item
        android:id="@+id/community"
        android:title="@string/Community_chats"
        android:icon="@drawable/baseline_people_24"
        />



</menu>