<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        style="@style/Title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/login_page"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:layout_margin="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/gmail"
        app:startIconTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_margin="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/email_area"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/key"
        app:startIconTint="@null"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/yellow"
        android:textAlignment="textEnd"
        android:fontFamily="@font/rubik"
        android:textSize="17sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_area"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        style="@style/ButtonYellow"
        android:background="@drawable/bg_button"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_register"
        android:textAlignment="center"
        android:fontFamily="@font/rubik"
        android:textSize="17sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>