<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        style="@style/Title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:fontFamily="@font/rubik"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/profile"
        app:startIconTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/name_area"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/gmail"
        app:startIconTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/email_area"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/key"
        app:startIconTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmpassword_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmpassword_label"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        style="@style/TextBoxTitle"
        app:layout_constraintTop_toBottomOf="@+id/password_area"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpassword_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_margin="10dp"
        style="@style/TextInputEditText"
        app:startIconDrawable="@drawable/key"
        app:startIconTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_label"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="70dp"
            android:gravity="start|center_vertical"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:textColor="@color/navy"
        android:backgroundTint="@color/yellow"
        app:cornerRadius="20dp"
        app:strokeColor="@color/black_49"
        app:strokeWidth="2dp"
        android:textStyle="bold"
        android:text="@string/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/privacypolicy_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_privacy"
        android:textAlignment="center"
        android:fontFamily="@font/rubik"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:textAlignment="center"
        android:fontFamily="@font/rubik"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>