<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="0dp"
    >

    <TextView
        android:id="@+id/Into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nuru"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/navy"/>


    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/rubik"
        />
    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textColor="@color/lightblack"
        android:textSize="18sp"
        android:fontFamily="@font/rubik"/>


</LinearLayout>